app/assets/stylesheets/ui/dropdowns/dropdowns.css
.drop-down {
  position: absolute;
  right: 0;
  top: 100%;
  min-width: 170px;
  display: block;
  visibility: hidden;
  opacity: 0;
  text-align: left;
  height: initial;
  z-index: 20;
  box-shadow: 0px 3px 9px -3px rgba(0, 0, 0, 0.2);
  white-space: nowrap;
}

li:hover > .drop-down,
.drop-down-holder:hover .drop-down,
.drop-down-holder.hover .drop-down {
  transition: opacity 0.25s ease, visibility 0.25s ease;
  visibility: visible;
  opacity: 1;
}

.drop-down.pop-out {
  min-width: 100%;
  width: auto;
  right: auto;
}
.drop-down.pop-out span {
  color: inherit;
}

.drop-down .drop-down {
  position: absolute;
  top: 0;
  left: 100%;
}

